Added DigestAuthentication and Unique ID

--- a/homeassistant/components/iotawatt/translations/en.json
+++ b/homeassistant/components/iotawatt/translations/en.json
@@ -12,7 +12,9 @@
             "user": {
                 "data": {
                     "host": "Host",
-                    "ip_address": "IP Address"
+                    "ip_address": "IP Address",
+                    "password": "Password",
+                    "username": "Username"
                 }
             }
         }
